crates/aivi-syntax/tests/snapshots/snapshots__snapshot_signal_declaration.snap
---
source: crates/aivi-syntax/tests/snapshots.rs
expression: module
---
Module {
    file: FileId(
        0,
    ),
    items: [
        Signal(
            NamedItem {
                base: ItemBase {
                    span: SourceSpan {
                        file: FileId(
                            0,
                        ),
                        span: Span {
                            start: ByteIndex(
                                0,
                            ),
                            end: ByteIndex(
                                18,
                            ),
                        },
                    },
                    token_range: TokenRange {
                        start: 0,
                        end: 7,
                    },
                    decorators: [],
                },
                keyword_span: SourceSpan {
                    file: FileId(
                        0,
                    ),
                    span: Span {
                        start: ByteIndex(
                            0,
                        ),
                        end: ByteIndex(
                            6,
                        ),
                    },
                },
                name: Some(
                    Identifier {
                        text: "counter",
                        span: SourceSpan {
                            file: FileId(
                                0,
                            ),
                            span: Span {
                                start: ByteIndex(
                                    7,
                                ),
                                end: ByteIndex(
                                    14,
                                ),
                            },
                        },
                    },
                ),
                type_parameters: [],
                constraints: [],
                annotation: None,
                function_form: Explicit,
                parameters: [],
                body: Some(
                    Expr(
                        Expr {
                            kind: Integer(
                                IntegerLiteral {
                                    raw: "0",
                                    span: SourceSpan {
                                        file: FileId(
                                            0,
                                        ),
                                        span: Span {
                                            start: ByteIndex(
                                                17,
                                            ),
                                            end: ByteIndex(
                                                18,
                                            ),
                                        },
                                    },
                                },
                            ),
                            span: SourceSpan {
                                file: FileId(
                                    0,
                                ),
                                span: Span {
                                    start: ByteIndex(
                                        17,
                                    ),
                                    end: ByteIndex(
                                        18,
                                    ),
                                },
                            },
                        },
                    ),
                ),
            },
        ),
    ],
    token_count: 7,
}
